# github-ai-review

./: .gitignore  README.md  action.yaml  pyproject.toml
.github/workflows/: main.yaml  main_workflow.yaml
src/: main.py
src/foo/: foo.py
src/reviewer/: reviewer.py
