[tool.poetry]
name = "github-pr-review"
version = "0.1.0"
description = ""
authors = ["Kenta Kozuka <kenta.kozuka@gmail.com>"]
readme = "README.md"
packages = [{include = "github_pr_review"}]

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "^1.58.2"
openai = "^0.27.8"
langchain = "^0.0.194"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
